# Sartre-Noon

./: Issues.md  README.md  test.cpp
ModSartre/: sartre-1.33-src.tgz
ModSartre/sartre/: CMakeLists.txt
ModSartre/sartre/cmake/modules/: FindROOT.cmake
ModSartre/sartre/cuba/src/divonne/: Sample.c
ModSartre/sartre/docs/: finalState.html  refFrangibleNucleus.html  runcardRef.html  tableGeneratorGuide.html  usersGuide.html
ModSartre/sartre/examples/: ._lambdaGeneratorMain.cpp  ._tableGeneratorUPCMain.cpp  CMakeLists.txt  createBSatBDependenceTable.cpp  sartreMain.cpp  sartreRuncard.txt  sartreUPCMain.cpp  tableGeneratorUPCMain.cpp
ModSartre/sartre/gemini/: CEvap.cpp  CMakeLists.txt  CSigCharged.h  CTlBarDist.cpp
ModSartre/sartre/src/: ._Event.h  Amplitudes.cpp  Amplitudes.h  CMakeLists.txt  DipoleModel.cpp  Enumerations.h  Event.h  GridSplineInterpolateSums.h  Kinematics.cpp  NeutronGenerator.cxx  NeutronGenerator.h  Sartre.cpp  Sartre.h  Table.h  Version.h  tableVarianceMaker.cpp
ModSartre/sartre/tables/: README.txt
ModSartre/sartre/tables/1/bNonSat/113/: EIC-A1-bNonSat-rho-KMW-mean_A-L.root  EIC-A1-bNonSat-rho-KMW-mean_A2-T.root
ModSartre/sartre/tables/1/bNonSat/22/: EIC-A1-bNonSat-dvcs-KMW-mean_A-T-C=80x45x160.root
ModSartre/sartre/tables/1/bNonSat/333/: EIC-A1-bNonSat-rho-KMW-mean_A2-L-C=80x45x160.root
ModSartre/sartre/tables/1/bNonSat/443/: EIC-A1-bNonSat-jpsi-KMW-mean_A2-L-C=80x45x160.root
ModSartre/sartre/tables/1/bSat/22/: EIC-A1-bSat-dvcs-KMW-mean_A-L.root  EIC-A1-bSat-dvcs-KMW-mean_A2-L-C=80x45x160.root  EIC-A1-bSat-dvcs-KMW-mean_A2-T-C=80x45x160.root
ModSartre/sartre/tables/1/bSat/333/: EIC-A1-bSat-phi-KMW-lambda_real-L.root  EIC-A1-bSat-phi-KMW-lambda_real-T.root  EIC-A1-bSat-phi-KMW-mean_A-L.root  EIC-A1-bSat-phi-KMW-mean_A2-L-C=7x45x160.root  EIC-A1-bSat-phi-KMW-mean_A2-L.root
ModSartre/sartre/tables/1/bSat/443/: EIC-A1-bSat-jpsi-KMW-mean_A2-L-C=80x45x160.root  EIC-A1-bSat-jpsi-KMW-mean_A2-L.root  EIC-A1-bSat-jpsi-KMW-mean_A2-T-C=region1-80x4x160.root
ModSartre/sartre/tables/197/bNonSat/113/: EIC-A197-bNonSat-rho-KMW-mean_A-L-C=region1.root  EIC-A197-bNonSat-rho-KMW-mean_A-L-C=region2.root
ModSartre/sartre/tables/197/bNonSat/443/: EIC-A197-bNonSat-jpsi-KMW-mean_A2-L-C=region2-newparam.root  EIC-A197-bNonSat-jpsi-KMW-mean_A2-T-C=region1-newparam.root
ModSartre/sartre/tables/197/bSat/113/: EIC-A197-bSat-rho-KMW-mean_A2-L-C=region1-20x55x10.root  EIC-A197-bSat-rho-KMW-mean_A2-T-C=region1-20x55x10.root
ModSartre/sartre/tables/197/bSat/443/: EIC-A197-bSat-jpsi-KMW-mean_A-L-C=newregion1.root  EIC-A197-bSat-jpsi-KMW-mean_A2-L-C=newregion1.root  EIC-A197-bSat-jpsi-KMW-mean_A2-T-C=newregion1.root  EIC-A197-bSat-jpsi-KMW-mean_A2-T-C=region1-20x4x17.root
ModSartre/sartre/tables/208/bSat/333/: EIC-A208-bSat-phi-KMW-mean_A-L-C=region1-46x100x18.root
ModSartre/sartre/tables/208/bSat/443/: region3_bSat_BSTT_A208_UPC_443_despiked_T2.root
ModSartre/sartre/tables/40/bSat/113/: EIC-A40-bSat-rho-KMW-mean_A2-L-C=region2.root
ModSartre/sartre/tables/40/bSat/22/: EIC-A40-bSat-dvcs-KMW-mean_A2-T-C=region2.root
ModSartre/sartre/tables/40/bSat/333/: EIC-A40-bSat-phi-KMW-mean_A-T-C=region1.root  EIC-A40-bSat-phi-KMW-mean_A-T-C=region2.root
ModSartre/sartre/tables/40/bSat/443/: EIC-A40-bSat-jpsi-KMW-mean_A-L-C=region1.root
SartreNoon/: DIct.cxx  NeutronGenerator.cxx  NeutronGenerator.h
SartreNoon/Mody/: Energy_Pb.root  Energy_Pb.txt  ExampleTheory.root  Rapidity_Pb.root  XSection.root  example_Pb.root  sartreRuncard.txt  sartreUPCRuncard.txt  test10.C  test11.C  test7.C  test8.C  test9.C  testing_commit.txt
SartreNoon/ORIGINAL/: NeutronGenerator.h  runBreakup.C
SartreNoon/Rev/: Afterburner.C  AfterburnerV2.C  NeutronGenerator.cxx  NeutronGenerator.h  NeutronGenerator_cxx_ACLiC_dict.cxx  NeutronGenerator_cxx_ACLiC_dict_rdict.pcm  NeutronGenerator_cxx_ACLiC_linkdef.h  NeutronGenerator_cxx_ACLiC_map.in  NeutronGenerator_cxx_ACLiC_map.out  Readme.md  classes.C  hENDF.root  neutrongen.cxx  noon1.root  output.txt  pseudo_rapidity.txt  run.C  sartreUPCRuncard.txt  temp.root  test.C  test.root  test1.cpp
SartreNoon/sartre/: CMakeLists.txt
SartreNoon/sartre/src/: ._EventGeneratorSettings.cpp  ._Sartre.cpp  ._tableDumper.cpp  CMakeLists.txt  Constants.h  CrossSection.h  DglapEvolution.cpp  DipoleModel.h  Event.cpp  Event.h  EventGeneratorSettings.h  ExclusiveFinalStateGenerator.cpp  FrangibleNucleus.h  Integrals.cpp  Integrals.h  ModeFinderFunctor.h  NeutronGenerator.cxx  Nucleon.cpp  PhotonFlux.cpp  PhotonFlux.h  Sartre.cpp  TableGeneratorNucleus.cpp  WaveOverlap.cpp  WaveOverlap.h  sartreMain.cpp  tableDumper.cpp  tableMerger.cpp
sartre/: ._CMakeLists.txt  CMakeLists.txt  INSTALL.html  sartreMain.cpp
sartre/docs/: ._download_install.html  ._usersGuide.html  overview.html  refConstants.html  refEnumerations.html  refEvent.html  refEventGeneratorSettings.html  refKinematics.html  references.html  sartre.css  tableTools.html
sartre/examples/: ._CMakeLists.txt  ._convergenceTest.cpp  ._convergenceTestRuncard.txt  ._createBSatBDependenceTable.cpp  ._sartreMain.cpp  ._sartreRuncard.txt  ._sartreTest.cpp  ._tableGeneratorRuncard.txt  CMakeCache.txt  CMakeLists.txt  Makefile  TNS.C  cmake_install.cmake  convergenceTest.cpp  hENDF.root  heraCompare.cpp  nucleusAnimation.cpp  sartreMain.cpp  sartreUPCRuncard.txt  tableGeneratorRuncard.txt  tableGeneratorUPCMain.cpp  tableGeneratorUPCRuncard.txt
sartre/gemini/: CChart.cpp  CLevelDensity.cpp  CMakeLists.txt  CMass.cpp  CNucleus.cpp  CRun.cpp  CRunThick.cpp  CSigBarDist.cpp  CTlArray.cpp  CYrast.cpp  README.txt
sartre/noon/: CMakeLists.txt  NeutronGenerator.cxx  NeutronGenerator.h  sartreMain.cpp
sartre/src/: ._AlphaStrong.cpp  ._AlphaStrong.h  ._Amplitudes.cpp  ._Amplitudes.h  ._BreakupProduct.cpp  ._Constants.h  ._CrossSection.cpp  ._CrossSection.h  ._DglapEvolution.cpp  ._DglapEvolution.h  ._DipoleModelParameters.cpp  ._DipoleModelParameters.h  ._EicSmearFormatWriter.cpp  ._Enumerations.h  ._Event.cpp  ._Event.h  (+83 more)
sartreb/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
(+303 files in other folders)
